service.yml
kind: Service
apiVersion: v1
metadata:
  name: zai
spec:
  selector:
    app: zai
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
