test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: a9289/ruby
        imagePullPolicy: Always
        resources:
         requests:
          cpu: 3m
          memory: 16Mi
         limits:
          cpu: 6m
          memory: 32Mi
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: test
  annotations:
    dev.okteto.com/auto-ingress: "true"
spec:
  type: ClusterIP  
  ports:
  - name: "http-port-tcp"
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: test
