ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zai
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: example-issuer
spec:
  tls:
  - hosts:
    - example-host.k8spin.cloud
    secretName: zai-certificate
  rules:
  - host: example-host.k8spin.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: zai
          servicePort: 80
